機能追加 / ビューに ContentControl を設置し、その中に ListView を格納

--- a/WPFTips/WPFTips.csproj
+++ b/WPFTips/WPFTips.csproj
@@ -71,6 +71,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="ControlSwitchSample\ControlSwitchSamplePage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="ListViews\ListViewPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -87,6 +91,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ControlSwitchSample\ControlSwitchSamplePage.xaml.cs">
+      <DependentUpon>ControlSwitchSamplePage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ControlSwitchSample\ControlSwitchSampleViewModel.cs" />
     <Compile Include="ListViews\ListViewPage.xaml.cs">
       <DependentUpon>ListViewPage.xaml</DependentUpon>
     </Compile>
